--- a/conf/test.config
+++ b/conf/test.config
@@ -21,10 +21,10 @@ params {
     max_time   = '8.h'
 
     // Input data
-    input  = 'testdata/samplesheet.csv'
+    input  = "${projectDir}/testdata/samplesheet.csv"
 
     // workflow parameters
-    outdir                     = "test_results"
+    outdir                     = "${projectDir}/test_results"
     estimatesex                = false
     createbafplots             = false
 
@@ -59,27 +59,27 @@ params {
     legacyMode                 = false
 
      // Reference //
-    data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes"
-    fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa'
-    fasta_fai                  = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa.fai'
-    chrom_sizes                = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/stats/hs37d5.fa.chrLenOnlyACGT_realChromosomes.tab'
-    chr_prefix                 = ""
+    genome                     = "GRCh37"
 
     // Beagle reference
-    beagle_reference           = "${params.data_path}/tools_data/Beagle"
-    beagle_genetic_map         = "${params.data_path}/tools_data/genetic_maps"
-    beagle_ref_ext             = "bref3" // vcf | bref | bref3
+    //beagle_reference           = "${projectDir}/testdata/tools_data"
+    beagle_ref_ext             = "vcf.gz" // vcf | bref | bref3
+      
+    data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes"
+
+    // Beagle reference
+    //beagle_genetic_map         = "${params.data_path}/tools_data/genetic_maps"
     beagle_map_ext             = "map"
 
     // Annotation files
-    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_135/00-All.SNV.vcf.gz"
-    mapability_file            = "${params.data_path}/databases/UCSC/wgEncodeCrgMapabilityAlign100mer_chr.bedGraph.gz"
-    replication_time_file      = "${params.data_path}/databases/ENCODE/ReplicationTime_10cellines_mean_10KB.Rda"
-    gc_content_file            = "${params.data_path}/stats/hg19_GRch37_100genomes_gc_content_10kb.txt"
-    gene_annotation_file       = "${params.data_path}/tools_data/ACEseq/INFORM_druggable_genes.csv"
+    dbsnp_snv                  = "${projectDir}/testdata/annotations/dbsnp_snv.test.vcf.gz"
+    mapability_file            = "${projectDir}/testdata/annotations/wgEncodeCrgMapabilityAlign100mer_chr.bedGraph.gz"
+    replication_time_file      = "${projectDir}/testdata/annotations/ReplicationTime_10cellines_mean_10KB.Rda"
+    gc_content_file            = "assets/hg19_GRch37_100genomes_gc_content_10kb.txt"
+    gene_annotation_file       = "${projectDir}/testdata/annotations/druggable_genes.csv"
 
     // get breakpoints/ PSCBS gaps
-    centromer_file             = "${params.data_path}/stats/hg19_gaps.txt"
+    centromer_file             = "assets/hg19_gaps.txt"
 
     // HDR estimation
     blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.txt"
