--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,6 +42,14 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName: BEAGLE5_BEAGLE {
+        ext.args   = "impute=false"
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
+            mode: params.publish_dir_mode
+        ]
+    }
     withName: 'ADD_HAPLOTYPES' {
         ext.args   = ""
         publishDir = [
