testdata is running hg19

--- a/conf/dkfz_cluster_hg37.config
+++ b/conf/dkfz_cluster_hg37.config
@@ -21,7 +21,7 @@ params {
     max_time   = '48.h'
 
     // Input data
-    input  = 'seqc2_testdata_chr21_hg37/samplesheet_37.csv'
+    input  = 'testdata/samplesheet.csv'
 
     // workflow parameters
     outdir                     = "results37"
@@ -47,10 +47,10 @@ params {
     chr_prefix                 = ""
 
     // Beagle reference
-    beagle_reference           = "${params.data_path}/tools_data/Beagle"
-    beagle_genetic_map         = "${params.data_path}/tools_data/genetic_maps"
-    beagle_ref_ext             = "bref3" // vcf | bref | bref3
-    beagle_map_ext             = "map"
+    beagle_ref                 = "${params.data_path}/tools_data/Beagle"
+    plink_map                  = "${params.data_path}/tools_data/genetic_maps"
+    //beagle_ref_ext             = "bref3" // vcf | bref | bref3
+    //beagle_map_ext             = "map"
 
     // Annotation files
     dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_135/00-All.SNV.vcf.gz"
@@ -63,8 +63,8 @@ params {
     centromer_file             = "${params.data_path}/stats/hg19_gaps.txt"
 
     // HDR estimation
-    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.txt"
-    cytobands_file             = "assets/hg19_cytoBand.txt"
+    blacklist_file             = "assets/hg19/artifact.homoDels.potentialArtifacts.txt"
+    cytobands_file             = "assets/hg19/hg19_cytoBand.txt"
 }
 
 // Perform work directory cleanup when the run has succesfully completed
