--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -32,7 +32,7 @@ params {
     fasta_fai                  = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38/sequence/GRCh38_decoy_ebv_alt_hla_phiX.fa.fai'
     chrom_sizes                = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38/stats/GRCh38_decoy_ebv_alt_hla_phiX.fa.chrLenOnlyACGT_realChromosomes.tsv'
     chr_prefix                 = "chr"
-    //contig_file              = "assets/GRCh38_decoy_ebv_phiX_alt_hla_chr.contig.bed"
+    //contig_file              = "assets/hg38/GRCh38_decoy_ebv_phiX_alt_hla_chr.contig.bed"
 
     // Beagle reference
     beagle_reference           = "${params.data_path}/tools_data/Beagle/1000genomes"
@@ -51,8 +51,8 @@ params {
     centromer_file             = "${params.data_path}/stats/gap_with_centromeres.header.txt"
 
     // HDR estimation
-    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.hg38.txt"
-    cytobands_file             = "assets/hg38_cytoBand.txt"
+    blacklist_file             = "assets/hg38/artifact.homoDels.potentialArtifacts.hg38.txt"
+    cytobands_file             = "assets/hg38/hg38_cytoBand.txt"
  }
 
 // Perform work directory cleanup when the run has succesfully completed
