--- a/conf/test_hg37.config
+++ b/conf/test_hg37.config
@@ -12,20 +12,26 @@
 
 params {
     config_profile_contact     = 'Kübra Narcı kuebra.narci@dkfz-heidelberg.de'
-    config_profile_name        = 'Test profile for DKFZ cluster'
+    config_profile_name        = 'Test profiler'
     config_profile_description = 'Test dataset for to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 32
-    max_memory = '500.GB'
-    max_time   = '48.h'
+    max_cpus   = 16
+    max_memory = '100.GB'
+    max_time   = '8.h'
 
     // Input data
-    input  = 'assets/samplesheet_37_test.csv'
+    input                      = "${projectDir}/testdata/samplesheet.csv"
+    outdir                     = "${projectDir}/results"
 
     // workflow parameters
-    outdir                     = "results37"
+    
+    estimatesex                = false
+    createbafplots             = false
 
+    minHT                      = 0
+
+    // correctGC options
     minLim                     = 0.47
     maxLim                     = 0.53
     min_length_purity          = 1000000
@@ -38,35 +44,34 @@ params {
     ploidy_min                 = 1.0
     ploidy_max                 = 6.5
     local_minium_upper_boundary_shift = 0.1
-    
 
-    // Reference //
-    data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes"
-    fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa'
-    fasta_fai                  = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa.fai'
-    chrom_sizes                = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/stats/hs37d5.fa.chrLenOnlyACGT_realChromosomes.tab'
-    chr_prefix                 = ""
+    // clusterAndPruneSegments
+    min_seg_length_prune       = 100
+    min_num_SNPs               = 1
+    clustering                 = "no"
+    min_cluster_number         = 1
+    min_membership             = 0.001
+    min_distance               = 0.0005
 
-    // Beagle reference
-    beagle_reference           = "${params.data_path}/tools_data/Beagle"
-    beagle_genetic_map         = "${params.data_path}/tools_data/genetic_maps"
-    beagle_ref_ext             = "bref3" // vcf | bref | bref3
-    beagle_map_ext             = "map"
+    legacyMode                 = false
+
+     // Reference //
+    genome                     = "GRCh37"
 
     // Annotation files
-    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_135/00-All.SNV.vcf.gz"
-    mapability_file            = "${params.data_path}/databases/UCSC/wgEncodeCrgMapabilityAlign100mer_chr.bedGraph.gz"
-    replication_time_file      = "${params.data_path}/databases/ENCODE/ReplicationTime_10cellines_mean_10KB.Rda"
-    gc_content_file            = "${params.data_path}/stats/hg19_GRch37_100genomes_gc_content_10kb.txt"
-    gene_annotation_file       = "${params.data_path}/tools_data/ACEseq/INFORM_druggable_genes.csv"
+    dbsnp_snv                  = "${projectDir}/testdata/annotations/dbsnp_snv.test.vcf.gz"
+    mapability_file            = "${projectDir}/testdata/annotations/mappability5.test.bed.gz"
+    replication_time_file      = "${projectDir}/testdata/annotations/ReplicationTime_10cellines_mean_10KB.Rda"
+    gc_content_file            = "assets/hg19/hg19_GRch37_100genomes_gc_content_10kb.txt"
+    gene_annotation_file       = "${projectDir}/testdata/annotations/druggable_genes.csv"
 
     // get breakpoints/ PSCBS gaps
-    centromer_file             = "${params.data_path}/stats/hg19_gaps.txt"
+    centromer_file             = "assets/hg19/hg19_gaps.txt"
 
     // HDR estimation
-    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.txt"
-    cytobands_file             = "assets/hg19_cytoBand.txt"
-}
+    blacklist_file             = "assets/hg19/artifact.homoDels.potentialArtifacts.txt"
+    cytobands_file             = "assets/hg19/hg19_cytoBand.txt"
+ }
 
 // Perform work directory cleanup when the run has succesfully completed
  cleanup = true
