14 create test dataset (#23)
* Delete seqc2_testdata_aceseq directory

* ACE-seq test dataset

* testdataset additions

* get beagle ref automatically

* annotations testdata

* testdata

* small changes

* beagle ref hg37 added to igenomes

* testdata is running hg19

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,6 +42,14 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName: BEAGLE5_BEAGLE {
+        ext.args   = "impute=false"
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
+            mode: params.publish_dir_mode
+        ]
+    }
     withName: 'ADD_HAPLOTYPES' {
         ext.args   = ""
         publishDir = [
@@ -52,7 +60,6 @@ process {
     }
     
     withName: 'ANNOTATE_CNV' {
-        ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/anno_cnv"},
             pattern: "*{.tab.gz,.tab.gz.tbi}",
@@ -169,7 +176,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_GENOTYPES|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_UNPHASED|FAKE_CONTROL|GET_GENOTYPES|MAKE_MOCK|WIN_GENERATOR|CREATE_FAKE_SAMPLES' {
+    withName: 'GREP_GENOTYPES|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_UNPHASED|FAKE_CONTROL|GET_GENOTYPES|MAKE_MOCK|WIN_GENERATOR|CREATE_FAKE_SAMPLES|PREPARE_BEAGLE_REF' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
