--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,8 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run main.nf -profile test,singularity --outdir <OUTDIR>
+        nextflow run main.nf -profile test,singularity
+        nextflow run main.nf -profile test,docker
 
 ----------------------------------------------------------------------------------------
 */
@@ -21,20 +22,17 @@ params {
     max_time   = '8.h'
 
     // Input data
-    input  = 'testdata/samplesheet.csv'
+    input                      = "${projectDir}/testdata/samplesheet.csv"
+    outdir                     = "${projectDir}/results"
 
     // workflow parameters
-    outdir                     = "test_results"
+    
     estimatesex                = false
     createbafplots             = false
 
     minHT                      = 0
 
     // correctGC options
-    lowess_f                   = 5
-    scale_factor               = 0
-    covplot_ylims              = 4
-    gc_bias_json_key           = "gc-bias"
     minLim                     = 0.47
     maxLim                     = 0.53
     min_length_purity          = 1000000
@@ -59,58 +57,57 @@ params {
     legacyMode                 = false
 
      // Reference //
-    data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes"
-    fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa'
-    fasta_fai                  = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa.fai'
-    chrom_sizes                = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/stats/hs37d5.fa.chrLenOnlyACGT_realChromosomes.tab'
-    chr_prefix                 = ""
-
-    // Beagle reference
-    beagle_reference           = "${params.data_path}/tools_data/Beagle"
-    beagle_genetic_map         = "${params.data_path}/tools_data/genetic_maps"
-    beagle_ref_ext             = "bref3" // vcf | bref | bref3
-    beagle_map_ext             = "map"
+    genome                     = "GRCh37"
 
     // Annotation files
-    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_135/00-All.SNV.vcf.gz"
-    mapability_file            = "${params.data_path}/databases/UCSC/wgEncodeCrgMapabilityAlign100mer_chr.bedGraph.gz"
-    replication_time_file      = "${params.data_path}/databases/ENCODE/ReplicationTime_10cellines_mean_10KB.Rda"
-    gc_content_file            = "${params.data_path}/stats/hg19_GRch37_100genomes_gc_content_10kb.txt"
-    gene_annotation_file       = "${params.data_path}/tools_data/ACEseq/INFORM_druggable_genes.csv"
+    dbsnp_snv                  = "${projectDir}/testdata/annotations/dbsnp_snv.test.vcf.gz"
+    mapability_file            = "${projectDir}/testdata/annotations/mappability5.test.bed.gz"
+    replication_time_file      = "${projectDir}/testdata/annotations/ReplicationTime_10cellines_mean_10KB.Rda"
+    gc_content_file            = "assets/hg19/hg19_GRch37_100genomes_gc_content_10kb.txt"
+    gene_annotation_file       = "${projectDir}/testdata/annotations/druggable_genes.csv"
 
     // get breakpoints/ PSCBS gaps
-    centromer_file             = "${params.data_path}/stats/hg19_gaps.txt"
+    centromer_file             = "assets/hg19/hg19_gaps.txt"
 
     // HDR estimation
-    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.txt"
-    cytobands_file             = "assets/hg19_cytoBand.txt"
+    blacklist_file             = "assets/hg19/artifact.homoDels.potentialArtifacts.txt"
+    cytobands_file             = "assets/hg19/hg19_cytoBand.txt"
  }
 
-// Perform work directory cleanup when the run has succesfully completed
- cleanup = true
-
-// Reduce the job submit rate to about 5 per second, this way the server won't be bombarded with jobs
-
-singularity {
-  enabled = true
-  cacheDir = "/omics/groups/OE0608/internal/kubran/singularity"
-  autoMounts = true
-  runOptions = "-B /omics/groups -B /omics/odcf/analysis -B /omics/odcf/project -B /omics/odcf/reference_data"
+// Enable container engines/virtualisation envs for CI testing
+// only works when specified with the profile ENV
+// otherwise tests can be done with the regular provided profiles
+if (System.getenv('PROFILE')) {
+    if ("$PROFILE" == "docker") {
+        conda.enabled                            = false
+        docker.enabled                           = true
+        docker.userEmulation                     = { params.use_gatk_spark ? false : true }.call()
+        charliecloud.enabled                     = false
+        podman.enabled                           = false
+        shifter.enabled                          = false
+        singularity.enabled                      = false
+    } else if ("$PROFILE" == "singularity") {
+        conda.enabled                            = false
+        params.singularity_pull_docker_container = false
+        singularity.autoMounts                   = true
+        singularity.enabled                      = true
+        charliecloud.enabled                     = false
+        docker.enabled                           = false
+        podman.enabled                           = false
+        shifter.enabled                          = false
+    }
 }
-env {
-    SINGULARITY_CACHEDIR="/omics/groups/OE0608/internal/kubran/singularity"
-    SINGULARITY_LIBRARYDIR="/omics/groups/OE0608/internal/kubran/singularity/library"
-}
-
 process {
-  executor = 'lsf'
-  scratch = '$SCRATCHDIR/$LSB_JOBID'
-
+   withName:'BCFTOOLS_MPILEUP|SAMTOOLS_MPILEUP|ESTIMATE_SEX|ANNOTATE_CNV|EMBED_HAPLOTYPES|DEFINE_BREAKPOINTS|ADD_SVS|ADD_CREST|PSCBS_SEGMENTATION|GENERATE_PLOTS'{
+        cpus            = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 6.GB * task.attempt, 'memory' ) }
+   }
+    withName:'MULTIQC'{
+        cpus            = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 6.GB * task.attempt, 'memory' ) }
+   } 
+    withName:'BEAGLE5_BEAGLE'{
+        cpus            = { check_max( 4 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 12.GB * task.attempt, 'memory' ) }
+   }
 }
-executor {
-  name = 'lsf'
-  perTaskReserve = false
-  perJobMemLimit = true
-  submitRateLimit = '30 sec'
-  queueSize=50
-  }
