singularity removed and args cleaned

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -51,7 +51,6 @@ process {
         ]
     }
     withName: 'ADD_HAPLOTYPES' {
-        ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/phasing"},
             pattern: "*{.tab.gz,.tab.gz.tbi}",
@@ -68,7 +67,6 @@ process {
     }
 
     withName: 'ADD_CREST|ADD_SVS' {
-        ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt}",
@@ -76,7 +74,6 @@ process {
         ]
     }
     withName: GROUP_HAPLOTYPES {
-        ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/haploblocks"},
             pattern: "*{.tab}",
@@ -84,7 +81,7 @@ process {
         ]
     }
     withName: DEFINE_BREAKPOINTS {
-        ext.args   = ""
+        ext.args   = '--libloc    "" '
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt.gz,.txt.gz.tbi,.pdf,.txt}",
@@ -92,7 +89,7 @@ process {
         ]
     }
     withName: CLUSTER_SEGMENTS {
-        ext.args   = ""
+        ext.args   = '--out . --libloc  "" --runInDebugMode  false'
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt.gz,.txt.gz.tbi,.txt,.pdf}",
@@ -100,7 +97,6 @@ process {
         ]
     }
     withName: "HOMOZYGOUS_DELETIONS|SEGMENTS_TO_DATA" {
-        ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt.gz,.txt.gz.tbi}",
@@ -108,7 +104,6 @@ process {
         ]
     }
     withName: 'GC_BIAS|CONVERT_TO_JSON' {
-        ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/gc_bias"},
             pattern: "*{png,txt,tsv,json,tab.gz,txt.gz}",
@@ -116,7 +111,7 @@ process {
         ]
     }
     withName: 'CREATE_BAF_PLOTS' {
-        ext.args   = ""
+        ext.args   = "--plot_Dir ."
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/baf_plots"},
             pattern: "*{png}",
@@ -124,42 +119,85 @@ process {
         ]
     }
     withName: GENERATE_PLOTS {
-        ext.args   = ""
+        ext.args   = "--outDir ."
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/plots"},
-            pattern: "*{.png}",
+            pattern: "*{png,txt}",
             mode: params.publish_dir_mode
         ]
     }
     withName: 'PURITY_PLOIDY' {
-        ext.args   = ""
+        ext.args   = "--path  ."
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.json}",
             mode: params.publish_dir_mode
         ]
     }
-    withName: GENERATE_PLOTS {
-        ext.args   = ""
+    withName: 'ESTIMATE_PEAKS' {
+        ext.args   = "--out   ."
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt}",
             mode: params.publish_dir_mode
         ]
     }
-    withName: "ESTIMATE_PEAKS|ESTIMATE_PURITY_PLOIDY|PSCBS_SEGMENTATION|ESTIMATE_HDRSCORE|ESTIMATE_SEX" {
-        ext.args   = ""
+    withName: 'ESTIMATE_PURITY_PLOIDY' {
+        ext.args   = "--out   ."
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt}",
             mode: params.publish_dir_mode
         ]
     }
-    withName: 'MERGE_SNP|MERGE_CNV|GET_GENOTYPES' {
-        ext.args   = ""
+    withName: 'PSCBS_SEGMENTATION' {
+        ext.args   = '--libloc    "" '
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'ESTIMATE_HDRSCORE' {
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: "ESTIMATE_SEX" {
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'MERGE_CNV' {
+        ext.args   = "--inputsuffix '.cnv.anno.tab.gz'"
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{tab.gz,tab.gz.tbi}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'MERGE_SNP' {
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{tab.gz,tab.gz.tbi}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'GET_GENOTYPES' {
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{tab.gz,tab.gz.tbi}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'BEAGLE5_BEAGLE' {
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -176,7 +214,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_GENOTYPES|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_UNPHASED|FAKE_CONTROL|GET_GENOTYPES|MAKE_MOCK|WIN_GENERATOR|CREATE_FAKE_SAMPLES|PREPARE_BEAGLE_REF' {
+    withName: 'GETCHROMSIZES|EMBED_HAPLOTYPES|CREATE_UNPHASED|FAKE_CONTROL|MAKE_MOCK|WIN_GENERATOR|CREATE_FAKE_SAMPLES|PREPARE_BEAGLE_REF' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
