prettier and small fixes

--- a/conf/dkfz_cluster_hg37.config
+++ b/conf/dkfz_cluster_hg37.config
@@ -21,7 +21,7 @@ params {
     max_time   = '48.h'
 
     // Input data
-    input  = 'testdata/samplesheet.csv'
+    input  = 'assets/samplesheet_37_female.csv'
 
     // workflow parameters
     outdir                     = "results37"
@@ -49,8 +49,8 @@ params {
     // Beagle reference
     beagle_ref                 = "${params.data_path}/tools_data/Beagle"
     plink_map                  = "${params.data_path}/tools_data/genetic_maps"
-    //beagle_ref_ext             = "bref3" // vcf | bref | bref3
-    //beagle_map_ext             = "map"
+    beagle_ref_ext             = "bref3" // vcf | bref | bref3
+    plink_map_ext             = "map"
 
     // Annotation files
     dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_135/00-All.SNV.vcf.gz"
