--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -31,6 +31,8 @@ params {
             chr_prefix            = ""
             beagle_ref            = "${params.igenomes_base}/Homo_sapiens/GATK/GRCh37/Annotation/beagle"
             plink_map             = "${params.igenomes_base}/Homo_sapiens/GATK/GRCh37/Annotation/plink"
+            beagle_ref_ext        = "bref3"
+            plink_map_ext         = "map"
         }
         'GRCh38' {
             chr_dir               = "${params.igenomes_base}/Homo_sapiens/GATK/GRCh38/Sequence/Chromosomes"
