--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -26,6 +26,19 @@ params {
     // workflow parameters
     outdir                     = "results"
 
+     minLim                     = 0.47
+    maxLim                     = 0.53
+    min_length_purity          = 1000000
+    min_hetSNPs_purity         = 0       // default 500 !!
+    dh_stop                    = "max"
+    min_length_dh_stop         = 1000000
+    dh_zero                    = "no"
+    purity_min                 = 0.3
+    purity_max                 = 1.0
+    ploidy_min                 = 1.0
+    ploidy_max                 = 6.5
+    local_minium_upper_boundary_shift = 0.1
+
     // Reference //
     data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38"
     fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38/sequence/GRCh38_decoy_ebv_alt_hla_phiX.fa'
@@ -35,10 +48,10 @@ params {
     //contig_file              = "assets/hg38/GRCh38_decoy_ebv_phiX_alt_hla_chr.contig.bed"
 
     // Beagle reference
-    beagle_reference           = "${params.data_path}/tools_data/Beagle/1000genomes"
-    beagle_genetic_map         = "${params.data_path}/databases/genetic_maps"
-    beagle_ref_ext             = "bref3" // vcf | bref | bref3
-    beagle_map_ext             = "CHR.map"
+    beagle_ref                  = "${params.data_path}/tools_data/Beagle/1000genomes"
+    plink_map                   = "${params.data_path}/databases/genetic_maps"
+    beagle_ref_ext              = "bref3" // vcf | bref | bref3
+    plink_map_ext               = "CHR.map"
 
     // Annotation files
     dbsnp_snv                  = "${params.data_path}/databases/dbSNP/00-All.SNV-noMNVs.vcf.gz"
@@ -48,7 +61,7 @@ params {
     gene_annotation_file       = "${params.data_path}/tools_data/ACEseq/INFORM_druggable_genes.hg38.tsv"
 
     // get breakpoints/ PSCBS gaps
-    centromer_file             = "${params.data_path}/stats/gap_with_centromeres.header.txt"
+    centromer_file             = "assets/hg38/gap_with_centromeres.header.txt"
 
     // HDR estimation
     blacklist_file             = "assets/hg38/artifact.homoDels.potentialArtifacts.hg38.txt"
